# inside-deep-learning

./: 01_the_mechanics_of_learning.ipynb  02_fully_connected_networks.ipynb  README.md  chaper_01_the_mechanics_of_learning.ipynb  pyproject.toml
notebooks/: 01_the_mechanics_of_learning.ipynb  02_fully_connected_networks.ipynb
