[tool.poetry]
name = "inside-deep-learning"
version = "0.1.0"
description = ""
authors = ["Prasanth Balaraman <prasanth.balaraman.engineer@gmail.com>"]
readme = "README.md"
packages = [{include = "inside_deep_learning"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.0"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
tqdm = "^4.65.0"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
notebook = "^6.5.4"
jupyter = "^1.0.0"
ipywidgets = "^8.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
